Improve UI - section icon arrangement - fix prob with color (f5f5f5 vs transparent) - use ngbCollapse instead of @if for sidemenu and menu - $popup can pass {obj} as param

--- a/src/app/run/start/start.component.scss
+++ b/src/app/run/start/start.component.scss
@@ -1,7 +1,7 @@
 /* iris app-nav */
-body {
-  font-size: 0.875rem;
-}
+// body {
+//   font-size: 0.875rem;
+// }
 
 .menu {
   color: white;
